fix: add js locally

--- a/tc/index.htm
+++ b/tc/index.htm
@@ -78,7 +78,7 @@
             </fieldset>
         </form>
     </body>
-    <script src="https://gist.githubusercontent.com/ianchanning/41a637174824c377f8a6b28ce4cd7663/raw/b3023db2e20b42f41daaada2899203f72b5f02c6/index.js"></script>
+    <script src="index.js"></script>
     <script>
         // const params = (new URL(document.location)).searchParams
         // document.getElementById('output').value = params.get('input').replace(/\t+/g, ' ')
