--- a/tc/index.htm
+++ b/tc/index.htm
@@ -80,11 +80,17 @@
     </body>
     <script src="index.js"></script>
     <script>
-        const params = (new URL(document.location)).searchParams
-        console.log({params});
-        if (params.length > 0) {
-            console.log(missions(params.get('missions').split(','), params.get('completed').split(',')));
+        (() => {
+            const params = (new URL(document.location)).searchParams
+            console.log({params});
+            if (!params.get('missions')) {
+                return;
+            }
+            console.log(missions(
+                params.get('missions').split(','), 
+                params.get('completed') && params.get('completed').split(',')
+            ));
             // document.getElementById('output').value = params.get('input').replace(/\t+/g, ' ')
-        }
+        })();
     </script>
 </html>
