feat: v0.0.9, add Moses

--- a/tc/index.htm
+++ b/tc/index.htm
@@ -75,7 +75,7 @@
                     <input id="completed" name="completed" type="input">
                 </div>
                 <div>
-                    <button type="submit">Format</button>
+                    <button type="submit">Show message</button>
                 </div>
             </fieldset>
         </form>
@@ -97,7 +97,6 @@
                 completed
             );
             document.getElementById('output').innerText = message(rawMessage, completed);
-            // document.getElementById('output').value = params.get('input').replace(/\t+/g, ' ')
         })();
     </script>
 </html>
