--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
             <img src="https://stackexchange.com/users/flair/128896.png?theme=clean" width="208" height="58" alt="profile for icc97 on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for icc97 on Stack Exchange, a network of free, community-driven Q&amp;A sites">
         </a></p>
         <h3>About</h3>
-        <p>For the best details of my career check out my <del>Stack Overflow <a href="https://careers.stackoverflow.com/ianchanning">careers page</a></del> (they killed it <code>*sigh*</code>, just <a href="https://www.linkedin.com/in/ianchanning/">linkedin.com/in/ianchanning</a> now then).
+        <p>For the best details of my career check out my <del>Stack Overflow <a href="https://careers.stackoverflow.com/ianchanning">careers page</a></del> (they killed it <code>*sigh*</code>, just <a href="https://www.linkedin.com/in/ianchanning/">linkedin.com/in/ianchanning</a> (<a href="files/Resume-Ian-Channing.pdf">PDF</a>) now then).
          The basics are: English coder in the Belgian countryside, working as a 
         lead front-end developer for engineering and stats startups. Beyond 
         that, I maintain a <a href="https://ianchanning.wordpress.com/">WordPress blog</a>.</p>
