--- a/index.htm
+++ b/index.htm
@@ -22,10 +22,9 @@
         <h3>About</h3>
         <p>For the best details of my career check out my <del>Stack Overflow <a href="https://careers.stackoverflow.com/ianchanning">careers page</a></del> (they killed it <code>*sigh*</code>, just <a href="https://www.linkedin.com/in/ianchanning/">linkedin.com/in/ianchanning</a> (<a href="files/Resume-Ian-Channing.pdf">PDF</a>) now then).
          The basics are: English coder in the Belgian countryside, working as a 
-        lead front-end developer for engineering and stats startups. Beyond 
+        lead front-end developer for stats, engineering and AI startups. Beyond 
         that, I maintain a <a href="https://ianchanning.wordpress.com/">WordPress blog</a>.</p>
-        <p>I’m a believer in friendliness, minimalism and not saying anything too controversial on your website home page.</p>
-        <p>If you use the <a href="http://pomodorotechnique.com/">Pomodoro</a> time management technique, I’ve created a friendly, minimalistic <a href="http://pom.ianchanning.com/">Lock Stock Pomodoro timer</a>.</p>
+        <p>I’m a believer in friendliness, minimalism, no hierarchies and not saying anything too controversial on your website home page.</p>
       </div>
     </div>
   </div>
