--- a/index.htm
+++ b/index.htm
@@ -20,8 +20,8 @@
             <img src="https://stackexchange.com/users/flair/128896.png?theme=clean" width="208" height="58" alt="profile for icc97 on Stack Exchange, a network of free, community-driven Q&amp;A sites" title="profile for icc97 on Stack Exchange, a network of free, community-driven Q&amp;A sites">
         </a></p>
         <h3>About</h3>
-        <p>For the best details of my career check out my <del>Stack Overflow <a href="https://careers.stackoverflow.com/ianchanning">careers page</a></del> (they killed it <code>*sigh*</code>, just <a href="https://www.linkedin.com/in/ianchanning/">linkedin.com/in/ianchanning</a> (<a href="files/Resume-Ian-Channing.pdf">PDF</a>) now then).
-         The basics are: English coder in the Belgian countryside, working as a 
+        <p>For the best details of my career check out my <del>Stack Overflow <a href="https://careers.stackoverflow.com/ianchanning">careers page</a></del> (they killed it <code>*sigh*</code>, just <a href="https://www.linkedin.com/in/ianchanning/">linkedin.com/in/ianchanning</a> (<a href="files/Resume-Ian-Channing.pdf">PDF</a>) now then).</p>
+        <p>The basics are: English coder in the Belgian countryside, working as a 
         lead front-end developer for stats, engineering and AI startups. Beyond 
         that, I maintain a <a href="https://ianchanning.wordpress.com/">WordPress blog</a>.</p>
         <p>I’m a believer in friendliness, minimalism, no hierarchies and not saying anything too controversial on your website home page.</p>
