--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>:Ian Channing</title>
+  <title>Welcome : Ian Channing</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/style.css" type="text/css" media="screen, print">
