--- a/pomo/index.html
+++ b/pomo/index.html
@@ -61,12 +61,6 @@
         margin-top: 10px;
         margin-right: 10px;
       }
-      button {
-        background: #f5f5f5;
-      }
-      button:hover {
-        background: #e5e5e5;
-      }
       label {
         display: block;
       }
@@ -125,11 +119,11 @@
     <h1>fuck it do it</h1>
     <div id="chker" class="chker">
       <ul class="tabs">
-        <li><a href="?quote=0">Bacon</a></li>
-        <li><a href="?quote=1">Eddie</a></li>
-        <li><a href="?quote=2">Soap</a></li>
-        <li><a href="?quote=3">Tom</a></li>
-        <li><a href="?quote=4">Rory</a></li>
+        <li><a href="?says=0&silent=0">Bacon</a></li>
+        <li><a href="?says=1&silent=0">Eddie</a></li>
+        <li><a href="?says=2&silent=0">Soap</a></li>
+        <li><a href="?says=3&silent=0">Tom</a></li>
+        <li><a href="?says=4&silent=0">Rory</a></li>
       </ul>
       <form>
         <fieldset>
@@ -162,7 +156,9 @@
                 readonly
                 title="I swear I did, like, 5 pomodoros in a row once"
               />
-              <a href="javascript:void(0);" id="reminder">+</a>
+              <code>
+                <a href="javascript:void(0);" id="reminder">+</a>
+              </code>
             </div>
           </div>
         </fieldset>
