feat: lets fucking go!

--- a/pomo/index.html
+++ b/pomo/index.html
@@ -132,7 +132,7 @@
     </style>
   </head>
   <body class="light">
-    <h1>fuck it do it</h1>
+    <h1>let's fucking go!</h1>
     <div id="chker" class="chker">
       <ul class="tabs">
         <li><a href="?says=0&silent=0">Bacon</a></li>
